# meeseeks

./: .gitignore  Cargo.toml  flake.nix
prompts/: calculator.txt  task-parse.txt  tweetu.txt  wiki.txt
proto/: v1.proto
src/: agent.rs  common.rs  error.rs  lib.rs  llama_parser.rs  llama_subprocess.rs  master.rs  tooldb.rs
src/tool/: calc.rs  mod.rs  tweet.rs  wiki.rs
tooldb/: main.py  requirements.txt
tooldb/.chroma/index/: id_to_uuid_c997cd86-c5e9-4589-a74e-4d6133486b8c.pkl  index_metadata_c997cd86-c5e9-4589-a74e-4d6133486b8c.pkl  uuid_to_id_c997cd86-c5e9-4589-a74e-4d6133486b8c.pkl
